# Computa-o-Gr-fica

./: .gitattributes  README.md
OpenGL/Camera Control and Terrain Decoration/: class7  main.cpp  main2.cpp
OpenGL/Catmull-Rom/: catmull-rom.cpp
OpenGL/FPS Camera Control and Terrain Decoration/: main.cpp
OpenGL/Heightmap/: main.cpp
OpenGL/Lighting/: main.cpp
OpenGL/Picking and Rendering Text/: main.cpp
OpenGL/Texture Mapping/: main.cpp
OpenGL/Texturing and Lighting/: main.cpp
Projeto/Fase1/assets/: SolarSystem.xml  box.3d  cone.3d  plane.3d  sphere.3d
Projeto/Fase1/engine/: CMakeLists.txt  engine_reader.cpp  engine_reader.h  main.cpp
Projeto/Fase1/generator/: generator.cpp  generator.h  main.cpp
Projeto/Fase2/assets/: SolarSystem.xml  plane.xml  sphere.xml
Projeto/Fase2/engine/: CMakeLists.txt  engine_reader.cpp  engine_reader.h  main.cpp
Projeto/Fase2/generator/: generator.cpp  main.cpp
Projeto/Fase3/assets/: SolarSystem.xml  box.xml  box2.xml  cone.xml  scene.xml  teapot.3d  teapot.xml
Projeto/Fase3/engine/: CMakeLists.txt  engine_reader.cpp  engine_reader.h  main.cpp
Projeto/Fase3/generator/: generator.cpp  generator.h  main.cpp
Projeto/Fase4/assets/: EarthMoon.xml  SolarSystem.xml  SolarSystem2.xml  SolarSystem3.xml  box.3d  box.xml  box2.xml  cone.3d  cone.xml  plane.3d  plane.xml  sphere.3d  sphere.xml  teapot.xml
Projeto/Fase4/engine/: CMakeLists.txt  engine_reader.cpp  engine_reader.h  main.cpp
Projeto/Fase4/generator/: CMakeLists.txt  generator.cpp  generator.h  main.cpp
